[tool.poetry]
name = "bentochain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bentoml = "1.0.18"
openai = "^0.27.4"
gradio = "3.27.0"
langchain = "^0.0.136"
transformers = "^4.27.4"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
sentencepiece = "^0.1.97"
datasets = "^2.11.0"
wikipedia = "^1.4.0"
ffmpeg = "^1.4"
soundfile = "^0.12.1"
llvmlite = "^0.39.1"
librosa = "^0.10.0.post2"
orjson = "3.8.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
